--- a/calculator-app-main/index.html
+++ b/calculator-app-main/index.html
@@ -29,15 +29,15 @@
             <h2>THEME</h2>
 
             <div>
-              <div class="number-container">
-                <span class="number">1</span>
-                <span class="number">2</span>
-                <span class="number">3</span>
+              <div class="label-container">
+                <label for="input1" class="label">1</label>
+                <label for="input2" class="label">2</label>
+                <label for="input3" class="label">3</label>
               </div>
               <div class="input-container">
-                <div class="input"></div>
-                <div class="input"></div>
-                <div class="input"></div>
+                <input id="input1" class="input" type="radio" />
+                <input id="input2" class="input" type="radio" />
+                <input id="input3" class="input" type="radio" />
               </div>
             </div>
           </div>
