added checked pseudo state

--- a/calculator-app-main/index.html
+++ b/calculator-app-main/index.html
@@ -35,9 +35,9 @@
                 <label for="input3" class="label">3</label>
               </div>
               <div class="input-container">
-                <input id="input1" class="input" type="radio" />
-                <input id="input2" class="input" type="radio" />
-                <input id="input3" class="input" type="radio" />
+                <input id="input1" class="input" type="radio" name="theme" />
+                <input id="input2" class="input" type="radio" name="theme" />
+                <input id="input3" class="input" type="radio" name="theme" />
               </div>
             </div>
           </div>
