--- a/calculator-app-main/index.html
+++ b/calculator-app-main/index.html
@@ -20,7 +20,7 @@
     <title>Frontend Mentor | Calculator app</title>
   </head>
   <body>
-    <main>
+    <main id="main">
       <div class="calc-container">
         <header>
           <h1>calc</h1>
